updated all files

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <nav class="site-navigation position-relative" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block clearfix">
-                <li><a href="/docs/resume.pdf" class="nav-link">Resume</a></li>
+                <li><a href="./docs/resume.pdf" class="nav-link">Resume</a></li>
                 <li><a href="/me_page/" class="nav-link">Me Page</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
@@ -162,10 +162,23 @@
           <div class="col-12 mb-12 position-relative">
             <h1 class="section-title text-center mb-5">Projects</h1>
           </div>
-          
+
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span>01</span></div>
+              <div class="service-about">
+              <video id='video' controls="controls" preload='none' style="max-width: 100%" 
+        poster="images/btpintro.png">
+        <source id='mp4' src="videos/BTP_Intro.mp4" type='video/mp4' />
+        <p>Your user agent does not support the HTML5 Video element.</p>
+      </video>
+  		</div>
+            </div>
+          </div>
+          
+          <div class="col-12 mb-12 col-md-6 mb-6">
+            <div class="service d-flex h-100">
+              <div class="service-number mr-4"><span>02</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/Swarmrobo.png">
@@ -178,7 +191,7 @@
 
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>02</span></div>
+              <div class="service-number mr-4"><span>03</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/MED2020.png">
@@ -191,7 +204,7 @@
 
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>03</span></div>
+              <div class="service-number mr-4"><span>04</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/SHTC2020.png">
@@ -204,7 +217,7 @@
 
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>04</span></div>
+              <div class="service-number mr-4"><span>05</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/FEDSM2020.png">
@@ -251,6 +264,13 @@
             </a>
           </div-->
 
+          <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+            <a href="images/ROAI2020.jpg" class="item-wrap fancybox">
+              <span class="icon-search2"></span>
+              <img class="img-fluid" src="images/ROAI2020.jpg">
+            </a>
+          </div>
+
           <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
 
             <a href="images/MED2020.jpg" class="item-wrap fancybox">
@@ -290,9 +310,11 @@
 				<div class="img" style="max-width: 100%" ><img src="images/epfl.jpg"></div>
 				<div class="wrap">
 					<div class="date">May 2020 - Present</div>
-					<h3 class="title">Collaborator, <a href="https://www.epfl.ch/labs/biorob/">EPFL Biorobotics Laboratory</a></h3>
+					<h3 class="title">Bachelor Thesis Project</h3>
+					<h3><a href="https://www.epfl.ch/labs/biorob/">EPFL Biorobotics Laboratory</a></h3>
 					<div class="content">
 						<p>I am currently involved in a project with Dr. Dimitar Stanev under Dr. Auke Ijspeert's Biorobotics Lab at EPFL. The work deals with developing reinforcement learning agents efficient enough to make a musculo-skeletal human model do the desired tasks. I learnt to use Opensim, Simbody and executing SLURM cluster jobs.</p>
+						<p><a href="./videos/BTP_Intro.mp4">Video Here</a></p>
 					</div>
 				</div>
 			</div>
