added video url redirect

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href= "./css/font-awesome/css/font-awesome.min.css" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -603,19 +604,22 @@
           <div class="col-md-8 mb-12">
           	<h3 class="footer-title text-center">Around the Web</h3>
             <div class="middle">
-		      <a class="btn1" href="https://www.facebook.com/Utkarsh745">
-		        <i class="fab fa-facebook-f"></i>
-		      </a>
 		      <a class="btn1" href="https://www.linkedin.com/in/utkarsh-mishra-502143156/">
 		        <i class="fab fa-linkedin"></i>
 		      </a>
 		      <a class="btn1" href="http://github.com/UtkarshMishra04">
 		        <i class="fab fa-github"></i>
 		      </a>
+		      <a class="btn1" href="https://scholar.google.com/citations?hl=en&user=10HbT44AAAAJ&view_op=list_works&sortby=pubdate#">
+		    <i class="ai ai-google-scholar-square ai-3x"></i>
+			</a>
+			<a class="btn1" href="https://www.facebook.com/Utkarsh745">
+		        <i class="fab fa-facebook-f"></i>
+		      </a>
 		      <a class="btn1" href="https://www.instagram.com/utkarsh_champ/">
 		        <i class="fab fa-instagram"></i>
 		      </a>
-		      <a class="btn1" href="https://www.youtube.com/channel/UCwn_mbgqpW8DD1rPYeiztkQ">
+			<a class="btn1" href="https://www.youtube.com/channel/UCwn_mbgqpW8DD1rPYeiztkQ">
 		        <i class="fab fa-youtube"></i>
 		    </a>
 		    </div>
