--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
         </div>
         
         <div id="posts" class="row no-gutter">
-          <!--div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="images/TRO_NNTQLD.jpg" class="item-wrap fancybox">
+          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+            <a href="images/NNTQLD2020.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="images/TRO_NNTQLD.jpg">
+              <img class="img-fluid" src="images/NNTQLD2020.jpg">
             </a>
           </div>
-          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <!--div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <a href="images/downstairs.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/downstairs.jpg">
