added docs and updated resume

--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
   		</div>
             </div>
           </div>
+
+          <div class="col-12 mb-12 col-md-6 mb-6">
+            <div class="service d-flex h-100">
+              <div class="service-number mr-4"><span>01</span></div>
+              <div class="service-about">
+              <video id='video' controls="controls" preload='none' style="max-width: 100%" 
+        poster="images/ICRA2021.png">
+        <source id='mp4' src="videos/ICRA2021.mp4" type='video/mp4' />
+        <p>Your user agent does not support the HTML5 Video element.</p>
+      </video>
+  		</div>
+            </div>
+          </div>
           
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
@@ -251,14 +264,14 @@
               <img class="img-fluid" src="images/NNTQLD2020.jpg">
             </a>
           </div>
-          <!--div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="images/downstairs.jpg" class="item-wrap fancybox">
+          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+            <a href="images/ICRA2021.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="images/downstairs.jpg">
+              <img class="img-fluid" src="images/ICRA2021.jpg">
             </a>
           </div>
 
-          <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <!--div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <a href="images/Rejected_IROS.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/Rejected_IROS.jpg">
