--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <a href="images/ROAI2020.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
-              <img class="img-fluid" src="images/ROAI2020.jpg">
+              <img class="img-fluid" src="images/ROAI2020D.jpg">
             </a>
           </div>
 
