--- a/index.html
+++ b/index.html
@@ -258,13 +258,22 @@
         </div>
         
         <div id="posts" class="row no-gutter">
-          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+
+          <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
+            <a href="images/SCIDETC2021.png" class="item-wrap fancybox">
+              <span class="icon-search2"></span>
+              <img class="img-fluid" src="images/SCIDETC2021.png">
+            </a>
+          </div>
+
+          <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
             <a href="images/NNTQLD2020.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/NNTQLD2020.jpg">
             </a>
           </div>
-          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+
+          <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
             <a href="images/ICRA2021.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/ICRA2021.jpg">
@@ -278,14 +287,14 @@
             </a>
           </div-->
 
-          <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
             <a href="images/ROAI2020.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/ROAI2020D.jpg">
             </a>
           </div>
 
-          <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
 
             <a href="images/MED2020.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
@@ -294,14 +303,14 @@
 
           </div>
 
-          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
             <a href="images/FEDSM2020.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/FEDSM2020.jpg">
             </a>
           </div>
 
-          <div class="item brand col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
             <a href="images/SHTC2020.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/SHTC2020.jpg">
@@ -320,6 +329,19 @@
             <h1 class="section-title text-center">Internships and Collaborations</h1>
           </div>
           <div class="timeline" style="max-width: 100%" >
+
+            <div class="item1" style="max-width: 100%" >
+              <div class="img" style="max-width: 100%" ><img src="images/IISC.jpg"></div>
+              <div class="wrap">
+                <div class="date">Dec 2020 - Present</div>
+                <h3 class="title">Project Student</h3>
+                <h3><a href="https://stochlab.github.io/">STOCH Lab, RBCCPS</a></h3>
+                <div class="content">
+                  <p>I am currently involved in a project with Dr. Shishir Kolathaya at the Stoch Lab. I got an interesting opportunity to work on Digit (Agility Robotics) in collaboration with Dr. Ayonga Hereid and I look forward to extend my knowledge on the intersection of Classical Control Theory and Reinforcement Learning.</p>
+                </div>
+              </div>
+            </div>
+
 			<div class="item1" style="max-width: 100%" >
 				<div class="img" style="max-width: 100%" ><img src="images/epfl.jpg"></div>
 				<div class="wrap">
@@ -347,7 +369,7 @@
 			<div class="item1" style="max-width: 100%" >
 				<div class="img" style="max-width: 100%" ><img src="images/swaayatt.png"></div>
 				<div class="wrap">
-					<div class="date">April 2020 - Present</div>
+					<div class="date">April 2020 - July 2020</div>
 					<h3 class="title">Reinforcement Learning Intern, <a href="http://www.swaayatt-robots.com/">Swaayatt Robots</a></h3>
 					<div class="content">
 						<p>I am involved as an intern with the Indian Self-Driving startup. My work was dedicated towards developing reinforcement learning based behavioral planner for autonomous driving. The agents were simulated in the CARLA Self Driving Simulator coupled with CARLA-ROS Bridge to use all the ROS functionalities.</p>
