--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 					<h3>Bachelors of Technology</h3> <h2>Mechanical Engineering</h2></p>
 					</div>
 					<h4 class="title">Indian Institute of technology Roorkee, India</h4>
-					<h5 class="title">CGPA: 9.031 (Until 6th Semester - Spring 2020)</h5>
+					<h5 class="title">CGPA: 9.059 (Until 7th Semester - Autumn 2020)</h5>
 					<div class="content">
 						<p>Currently I am a senior year undergraduate engaged in various campus activities and research collaborations with the Robotics and Control Laboratory in Mechanical and Industrial Engineering Department as well as in Machine Intelligence Laboratory in Computer Science Engineering Department.</p>
 					</div>
