--- a/redirects/icra2021.html
+++ b/redirects/icra2021.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="0; URL=https://uncloud.univ-nantes.fr/index.php/s/dPsaidRxRz2DPLe">
-<link rel="canonical" href="https://uncloud.univ-nantes.fr/index.php/s/dPsaidRxRz2DPLe">
+<meta http-equiv="refresh" content="0; URL=https://youtu.be/DWn6rQLSZPU">
+<link rel="canonical" href="https://youtu.be/DWn6rQLSZPU">
