updated with IROS 2021 Preprint

--- a/index.html
+++ b/index.html
@@ -179,7 +179,20 @@
 
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>01</span></div>
+              <div class="service-number mr-4"><span>02</span></div>
+              <div class="service-about">
+              <video id='video' controls="controls" preload='none' style="max-width: 100%" 
+        poster="images/IROS2021Video.png">
+        <source id='mp4' src="videos/IROS2021.mp4" type='video/mp4' />
+        <p>Your user agent does not support the HTML5 Video element.</p>
+      </video>
+  		</div>
+            </div>
+          </div>
+
+          <div class="col-12 mb-12 col-md-6 mb-6">
+            <div class="service d-flex h-100">
+              <div class="service-number mr-4"><span>03</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/ICRA2021.png">
@@ -192,7 +205,7 @@
           
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>02</span></div>
+              <div class="service-number mr-4"><span>04</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/Swarmrobo.png">
@@ -205,7 +218,7 @@
 
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>03</span></div>
+              <div class="service-number mr-4"><span>05</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/MED2020.png">
@@ -218,7 +231,7 @@
 
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>04</span></div>
+              <div class="service-number mr-4"><span>06</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/SHTC2020.png">
@@ -231,7 +244,7 @@
 
           <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>05</span></div>
+              <div class="service-number mr-4"><span>07</span></div>
               <div class="service-about">
               <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/FEDSM2020.png">
@@ -258,6 +271,13 @@
         </div>
         
         <div id="posts" class="row no-gutter">
+
+        	<div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
+            <a href="images/IROS2021Paper.png" class="item-wrap fancybox">
+              <span class="icon-search2"></span>
+              <img class="img-fluid" src="images/IROS2021Paper.png">
+            </a>
+          </div>
 
           <div class="item web col-4 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3">
             <a href="images/SCIDETC2021.png" class="item-wrap fancybox">
